[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchid-ranker"
version = "0.1.0"
description = "Adaptive educational recommender toolkit with learner simulators and preprocessing utilities."
readme = "README.md"
authors = [
  {name = "Anonymous"}
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scikit-learn>=1.1",
  "torch>=1.13",
  "matplotlib>=3.6",
  "scipy>=1.9",
  "pyyaml>=6.0",
  "joblib>=1.2"
]

[project.optional-dependencies]
preprocessing = [
  "tqdm>=4.60"
]

[project.urls]
Homepage = "https://anonymous.4open.science/r/ORCHID_RANKER_SAC26"
Source = "https://anonymous.4open.science/r/ORCHID_RANKER_SAC26"

[tool.setuptools.packages.find]
where = ["src"]
include = ["orchid_ranker", "orchid_ranker.*"]

[project.scripts]
orchid-preprocess = "orchid_ranker.preprocessing.cli:main"
orchid-preprocess-ednet = "orchid_ranker.preprocessing.ednet:main"
orchid-preprocess-oulad = "orchid_ranker.preprocessing.oulad:main"
